--- a/prometheus-grafana/prometheus.yaml
+++ b/prometheus-grafana/prometheus.yaml
@@ -432,6 +432,8 @@ data:
       static_configs:
       - targets:
         - localhost:9090
+        - localhost:9001
+        - localhost:9015
     - bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
       job_name: kubernetes-apiservers
       kubernetes_sd_configs:
