--- a/prometheus-grafana/prometheus.yaml
+++ b/prometheus-grafana/prometheus.yaml
@@ -434,6 +434,7 @@ data:
         - localhost:9090
         - localhost:9001
         - localhost:9015
+        - localhost:10251
     - bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
       job_name: kubernetes-apiservers
       kubernetes_sd_configs:
