latest changes & portworx enabled

--- a/kafka.yaml
+++ b/kafka.yaml
@@ -9,6 +9,9 @@ spec:
     version: 2.2.1
     replicas: 3
     listeners:
+      external:
+        type: loadbalancer
+        tls: false # by default true
       plain:
         networkPolicyPeers:
         - podSelector:
@@ -26,6 +29,7 @@ spec:
               app: fabrikate-kafka
     config:
       log.message.format.version: "2.2"
+      ssl.client.auth: "required"
     tlsSidecar:
       resources:
         requests:
@@ -35,13 +39,10 @@ spec:
           cpu: 500m
           memory: 128Mi
     storage:
-      type: jbod
-      volumes:
-      - id: 0
-        class: managed-premium
-        type: persistent-claim
-        size: 64Gi
-        deleteClaim: false
+      type: persistent-claim
+      class: portworx-sc-rep3
+      size: 20Gi
+      deleteClaim: false
     metrics:
       # Inspired by config from Kafka 2.0.0 example rules:
       # https://github.com/prometheus/jmx_exporter/blob/master/example_configs/kafka-2_0_0.yml
@@ -143,8 +144,8 @@ spec:
     replicas: 3
     storage:
       type: persistent-claim
-      class: managed-premium
-      size: 32Gi
+      class: portworx-sc
+      size: 2Gi
       deleteClaim: false
     tlsSidecar:
       resources:
@@ -184,6 +185,56 @@ spec:
   entityOperator:
     topicOperator: {}
     userOperator: {}
+---
+apiVersion: kafka.strimzi.io/v1alpha1
+kind: KafkaUser
+metadata:
+  name: kafka-connect-user
+  namespace: kafka
+  labels:
+    strimzi.io/cluster: kcluster
+spec:
+  authentication:
+    type: tls
+  authorization:
+    type: simple
+    acls:
+      - resource:
+          type: topic
+          name: kconnect-mongodb-topic
+          patternType: literal
+        operation: All
+---
+apiVersion: kafka.strimzi.io/v1beta1
+kind: KafkaConnect
+metadata:
+  name: kconnect-cluster
+  namespace: kafka
+  labels:
+    app: kconnect-cluster
+spec:
+  version: 2.2.1
+  replicas: 1
+  bootstrapServers: kcluster-kafka-bootstrap:9093
+  image: edsa14/mongo-kafka-connect:v2
+  authentication:
+    type: tls
+    certificateAndKey: 
+      certificate: user.crt
+      key: user.key
+      secretName: kafka-connect-user
+  tls:
+    trustedCertificates:
+      - secretName: kcluster-cluster-ca-cert
+        certificate: ca.crt
+  metrics:
+    lowercaseOutputName: true
+    lowercaseOutputLabelNames: true
+    rules:
+    - pattern : "kafka.connect<type=connect-worker-metrics>([^:]+):"
+      name: "kafka_connect_connect_worker_metrics_$1"
+    - pattern : "kafka.connect<type=connect-metrics, client-id=([^:]+)><>([^:]+)"
+      name: "kafka_connect_connect_metrics_$1_$2"
 ---
 apiVersion: v1
 kind: Namespace
@@ -226,6 +277,21 @@ spec:
   podSelector:
     matchLabels:
       strimzi.io/name: kcluster-zookeeper
+  ingress:
+  - from:
+    - podSelector:
+        matchLabels:
+          app: prometheus
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-prometheus-kafka-connect
+  namespace: kafka
+spec:
+  podSelector:
+    matchLabels:
+      strimzi.io/name: kconnect-cluster
   ingress:
   - from:
     - podSelector:
