--- a/kafka.yaml
+++ b/kafka.yaml
@@ -1,241 +1,4 @@
 ---
-apiVersion: kafka.strimzi.io/v1beta1
-kind: Kafka
-metadata:
-  name: kcluster
-  namespace: kafka
-spec:
-  kafka:
-    version: 2.2.1
-    replicas: 3
-    listeners:
-      external:
-        type: loadbalancer
-        tls: false # by default true
-      plain:
-        networkPolicyPeers:
-        - podSelector:
-            matchLabels:
-              app: schema-registry
-          namespaceSelector:
-            matchLabels:
-              app: fabrikate-kafka
-      tls:
-        authentication:
-          type: tls
-        networkPolicyPeers:
-        - namespaceSelector:
-            matchLabels:
-              app: fabrikate-kafka
-    config:
-      log.message.format.version: "2.2"
-      ssl.client.auth: "required"
-    tlsSidecar:
-      resources:
-        requests:
-          cpu: 200m
-          memory: 64Mi
-        limits:
-          cpu: 500m
-          memory: 128Mi
-    storage:
-      type: persistent-claim
-      class: portworx-sc-rep3
-      size: 20Gi
-      deleteClaim: false
-    metrics:
-      # Inspired by config from Kafka 2.0.0 example rules:
-      # https://github.com/prometheus/jmx_exporter/blob/master/example_configs/kafka-2_0_0.yml
-      lowercaseOutputName: true
-      rules:
-      # Special cases and very specific rules
-      - pattern : kafka.server<type=(.+), name=(.+), clientId=(.+), topic=(.+), partition=(.*)><>Value
-        name: kafka_server_$1_$2
-        type: GAUGE
-        labels:
-          clientId: "$3"
-          topic: "$4"
-          partition: "$5"
-      - pattern : kafka.server<type=(.+), name=(.+), clientId=(.+), brokerHost=(.+), brokerPort=(.+)><>Value
-        name: kafka_server_$1_$2
-        type: GAUGE
-        labels:
-          clientId: "$3"
-          broker: "$4:$5"
-      # Some percent metrics use MeanRate attribute
-      # Ex) kafka.server<type=(KafkaRequestHandlerPool), name=(RequestHandlerAvgIdlePercent)><>MeanRate
-      - pattern: kafka.(\w+)<type=(.+), name=(.+)Percent\w*><>MeanRate
-        name: kafka_$1_$2_$3_percent
-        type: GAUGE
-      # Generic gauges for percents
-      - pattern: kafka.(\w+)<type=(.+), name=(.+)Percent\w*><>Value
-        name: kafka_$1_$2_$3_percent
-        type: GAUGE
-      - pattern: kafka.(\w+)<type=(.+), name=(.+)Percent\w*, (.+)=(.+)><>Value
-        name: kafka_$1_$2_$3_percent
-        type: GAUGE
-        labels:
-          "$4": "$5"
-      # Generic per-second counters with 0-2 key/value pairs
-      - pattern: kafka.(\w+)<type=(.+), name=(.+)PerSec\w*, (.+)=(.+), (.+)=(.+)><>Count
-        name: kafka_$1_$2_$3_total
-        type: COUNTER
-        labels:
-          "$4": "$5"
-          "$6": "$7"
-      - pattern: kafka.(\w+)<type=(.+), name=(.+)PerSec\w*, (.+)=(.+)><>Count
-        name: kafka_$1_$2_$3_total
-        type: COUNTER
-        labels:
-          "$4": "$5"
-      - pattern: kafka.(\w+)<type=(.+), name=(.+)PerSec\w*><>Count
-        name: kafka_$1_$2_$3_total
-        type: COUNTER
-      # Generic gauges with 0-2 key/value pairs
-      - pattern: kafka.(\w+)<type=(.+), name=(.+), (.+)=(.+), (.+)=(.+)><>Value
-        name: kafka_$1_$2_$3
-        type: GAUGE
-        labels:
-          "$4": "$5"
-          "$6": "$7"
-      - pattern: kafka.(\w+)<type=(.+), name=(.+), (.+)=(.+)><>Value
-        name: kafka_$1_$2_$3
-        type: GAUGE
-        labels:
-          "$4": "$5"
-      - pattern: kafka.(\w+)<type=(.+), name=(.+)><>Value
-        name: kafka_$1_$2_$3
-        type: GAUGE
-      # Emulate Prometheus 'Summary' metrics for the exported 'Histogram's.
-      # Note that these are missing the '_sum' metric!
-      - pattern: kafka.(\w+)<type=(.+), name=(.+), (.+)=(.+), (.+)=(.+)><>Count
-        name: kafka_$1_$2_$3_count
-        type: COUNTER
-        labels:
-          "$4": "$5"
-          "$6": "$7"
-      - pattern: kafka.(\w+)<type=(.+), name=(.+), (.+)=(.*), (.+)=(.+)><>(\d+)thPercentile
-        name: kafka_$1_$2_$3
-        type: GAUGE
-        labels:
-          "$4": "$5"
-          "$6": "$7"
-          quantile: "0.$8"
-      - pattern: kafka.(\w+)<type=(.+), name=(.+), (.+)=(.+)><>Count
-        name: kafka_$1_$2_$3_count
-        type: COUNTER
-        labels:
-          "$4": "$5"
-      - pattern: kafka.(\w+)<type=(.+), name=(.+), (.+)=(.*)><>(\d+)thPercentile
-        name: kafka_$1_$2_$3
-        type: GAUGE
-        labels:
-          "$4": "$5"
-          quantile: "0.$6"
-      - pattern: kafka.(\w+)<type=(.+), name=(.+)><>Count
-        name: kafka_$1_$2_$3_count
-        type: COUNTER
-      - pattern: kafka.(\w+)<type=(.+), name=(.+)><>(\d+)thPercentile
-        name: kafka_$1_$2_$3
-        type: GAUGE
-        labels:
-          quantile: "0.$4"
-  zookeeper:
-    replicas: 3
-    storage:
-      type: persistent-claim
-      class: portworx-sc
-      size: 2Gi
-      deleteClaim: false
-    tlsSidecar:
-      resources:
-        requests:
-          cpu: 200m
-          memory: 64Mi
-        limits:
-          cpu: 500m
-          memory: 128Mi
-    metrics:
-      # Inspired by Zookeeper rules
-      # https://github.com/prometheus/jmx_exporter/blob/master/example_configs/zookeeper.yaml
-      lowercaseOutputName: true
-      rules:
-      # replicated Zookeeper
-      - pattern: "org.apache.ZooKeeperService<name0=ReplicatedServer_id(\\d+)><>(\\w+)"
-        name: "zookeeper_$2"
-      - pattern: "org.apache.ZooKeeperService<name0=ReplicatedServer_id(\\d+), name1=replica.(\\d+)><>(\\w+)"
-        name: "zookeeper_$3"
-        labels:
-          replicaId: "$2"
-      - pattern: "org.apache.ZooKeeperService<name0=ReplicatedServer_id(\\d+), name1=replica.(\\d+), name2=(\\w+)><>(\\w+)"
-        name: "zookeeper_$4"
-        labels:
-          replicaId: "$2"
-          memberType: "$3"
-      - pattern: "org.apache.ZooKeeperService<name0=ReplicatedServer_id(\\d+), name1=replica.(\\d+), name2=(\\w+), name3=(\\w+)><>(\\w+)"
-        name: "zookeeper_$4_$5"
-        labels:
-          replicaId: "$2"
-          memberType: "$3"
-      # standalone Zookeeper
-      - pattern: "org.apache.ZooKeeperService<name0=StandaloneServer_port(\\d+)><>(\\w+)"
-        name: "zookeeper_$2"
-      - pattern: "org.apache.ZooKeeperService<name0=StandaloneServer_port(\\d+), name1=(InMemoryDataTree)><>(\\w+)"
-        name: "zookeeper_$2_$3"
-  entityOperator:
-    topicOperator: {}
-    userOperator: {}
----
-apiVersion: kafka.strimzi.io/v1alpha1
-kind: KafkaUser
-metadata:
-  name: kafka-connect-user
-  namespace: kafka
-  labels:
-    strimzi.io/cluster: kcluster
-spec:
-  authentication:
-    type: tls
-  authorization:
-    type: simple
-    acls:
-      - resource:
-          type: topic
-          name: kconnect-mongodb-topic
-          patternType: literal
-        operation: All
----
-apiVersion: kafka.strimzi.io/v1beta1
-kind: KafkaConnect
-metadata:
-  name: kconnect-cluster
-  namespace: kafka
-  labels:
-    app: kconnect-cluster
-spec:
-  version: 2.2.1
-  replicas: 1
-  bootstrapServers: kcluster-kafka-bootstrap:9093
-  image: edsa14/mongo-kafka-connect:v2
-  authentication:
-    type: tls
-    certificateAndKey: 
-      certificate: user.crt
-      key: user.key
-      secretName: kafka-connect-user
-  tls:
-    trustedCertificates:
-      - secretName: kcluster-cluster-ca-cert
-        certificate: ca.crt
-  metrics:
-    lowercaseOutputName: true
-    lowercaseOutputLabelNames: true
-    rules:
-    - pattern : "kafka.connect<type=connect-worker-metrics>([^:]+):"
-      name: "kafka_connect_connect_worker_metrics_$1"
-    - pattern : "kafka.connect<type=connect-metrics, client-id=([^:]+)><>([^:]+)"
-      name: "kafka_connect_connect_metrics_$1_$2"
----
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -243,62 +6,7 @@ metadata:
   labels:
     app: fabrikate-kafka
 ---
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: default-deny
-  namespace: kafka
-spec:
-  podSelector: {}
-  policyTypes:
-  - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: allow-prometheus-kafka
-  namespace: kafka
-spec:
-  podSelector:
-    matchLabels:
-      strimzi.io/name: kcluster-kafka
-  ingress:
-  - from:
-    - podSelector:
-        matchLabels:
-          app: prometheus
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: allow-prometheus-zookeeper
-  namespace: kafka
-spec:
-  podSelector:
-    matchLabels:
-      strimzi.io/name: kcluster-zookeeper
-  ingress:
-  - from:
-    - podSelector:
-        matchLabels:
-          app: prometheus
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: allow-prometheus-kafka-connect
-  namespace: kafka
-spec:
-  podSelector:
-    matchLabels:
-      strimzi.io/name: kconnect-cluster
-  ingress:
-  - from:
-    - podSelector:
-        matchLabels:
-          app: prometheus
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: portworx
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: portworx
