adding default updated portworx helm for testing

--- a/kafka.yaml
+++ b/kafka.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: fabrikate-kafka
 ---
-# apiVersion: v1
-# kind: Namespace
-# metadata:
-#   name: portworx
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: portworx
