--- a/manifests/eck-cluster.yaml
+++ b/manifests/eck-cluster.yaml
@@ -2,6 +2,7 @@ apiVersion: elasticsearch.k8s.elastic.co/v1alpha1
 kind: Elasticsearch
 metadata:
   name: quickstart
+  namespace: elasticsearch
 spec:
   version: 7.2.0
   nodes:
